--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "cmdk": "^1.0.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.456.0",
+    "module": "^1.2.5",
     "next": "^15.0.3",
     "next-themes": "^0.4.3",
     "python": "^0.0.4",
